Added an icon image of the game to the main element

--- a/index.html
+++ b/index.html
@@ -23,8 +23,16 @@
         <li><a href="play.html">PLAY</a></li>
       </ul>
     </nav>
-
   </header>
+
+  <main>
+    <div id="icon">
+      <img src="assets/images/RPSLS icon.png" alt="Icon explaining the game">
+    </div>
+        
+
+  
+  </main>
 
 
 
