Added game rules to home page and styled it

--- a/index.html
+++ b/index.html
@@ -26,22 +26,50 @@
   </header>
 
   <main>
+    <!-- Home page displaying game rules in diagram and written format -->
     <div id="icon">
       <img src="assets/images/RPSLS icon.png" alt="Icon explaining the game">
     </div>
-        
+    <br>
+    <section id="game-rules" class="rules">
+   <div> 
+    <h2 class="text-center">Game Rules</h1>
+  </div>
 
-  
+    <br>
+    <div class="blocks">
+      <div>
+      <h3><strong>Rules</strong></h3>
+      <br>
+      <p><i class="fa-regular fa-hand-back-fist"></i>  Rock crushes Lizard and crushes Scissors.</p>
+      <br>
+      <p><i class="fa-regular fa-hand"></i>  Paper disproves Spock and covers Rock.</p>
+      <br>
+      <p><i class="fa-regular fa-hand-scissors"></i>  Scissors decapitates Lizard and cuts Paper.</p>
+      <br>
+      <p><i class="fa-regular fa-hand-lizard"></i>  Lizard poisons Spock and eats Paper.</p>
+      <br>
+      <p><i class="fa-regular fa-hand-spock"></i>  Spock smashes Scissors and vaporizes Rock.</p>
+      </div>
+      <br>
+      <div>
+      <h3><strong>Instructions</strong></h3>
+      <br>
+     <p>In the diagram above, arrows indicate dominance.</p>
+     <br>
+     <p>Game is played between User and Computer.</p>
+     <br>
+     <p>Whoever clicks on the winning icon, wins. If both choose the same icon, then it's a tie.</p>
+     <br>
+     <p>Click on the "Reset" button to start the game again.</p>
+      <br>
+      <p>Click on the PLAY button to begin the game. Let's play!</p>
+      </div>
+    </div>
+    </section>
   </main>
 
-
-
-
-
-
-
-
-  
+  <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
   <script src="assets/js/script.js"></script>  
 </body>
 </html>
