Added and styled play game button on home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header>
-    <!--Site logo -->
+    <!--Site logo and nav links -->
     <img src="assets/images/logo rpsls.png" alt="Logo of Rock paper scissors lizard spock in a galaxy" id="logo">
 
     <nav> 
@@ -31,7 +31,7 @@
       <img src="assets/images/RPSLS icon.png" alt="Icon explaining the game">
     </div>
     <br>
-    <section id="game-rules" class="rules">
+    <section id="game-rules">
    <div> 
     <h2 class="text-center">Game Rules</h1>
   </div>
@@ -41,7 +41,7 @@
       <div>
       <h3><strong>Rules</strong></h3>
       <br>
-      <p><i class="fa-regular fa-hand-back-fist"></i>  Rock crushes Lizard and crushes Scissors.</p>
+      <p><i class="fa-regular fa-hand-back-fist"></i> Rock crushes Lizard and crushes Scissors.</p>
       <br>
       <p><i class="fa-regular fa-hand"></i>  Paper disproves Spock and covers Rock.</p>
       <br>
@@ -64,6 +64,8 @@
      <p>Click on the "Reset" button to start the game again.</p>
       <br>
       <p>Click on the PLAY button to begin the game. Let's play!</p>
+      <br>
+      <button onclick="window.location.href='play.html'" class="align-center">PLAY GAME</button>
       </div>
     </div>
     </section>
