Added game heading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Rock Paper Scissor Lizard Spock</title>
+    <title>Rock Paper Scissor Lizard Spock Game</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/favicon_io//apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon_io/favicon-32x32.png">
@@ -26,7 +26,10 @@
   </header>
 
   <main>
-    <!-- Home page displaying game rules in diagram and written format -->
+    <!-- Home page displaying game name, game rules in diagram and written format -->
+     <h1 class="text-center">
+      <p>Welcome to</p> 
+      <p>ROCK PAPER SCISSORS LIZARD SPOCK GAME</p></h1>
     <div id="icon">
       <img src="assets/images/RPSLS icon.png" alt="Icon explaining the game">
     </div>
@@ -37,7 +40,7 @@
   </div>
 
     <br>
-    <div class="blocks">
+    <div class="blocks" class="text-center">
       <div>
       <h3><strong>Rules</strong></h3>
       <br>
