Added content to play.html page

--- a/play.html
+++ b/play.html
@@ -26,6 +26,38 @@
 
   </header>
 
+  <main>
+    <h1 class="text-center">
+      <p>ROCK PAPER SCISSORS LIZARD SPOCK</p></h1>
+      <br>
+      <div class="score-board">
+        <div class="label">USER</div>
+        <div class="label">COMPUTER</div>
+        <span id="user-score">0</span>:<span id="computer-score">0</span>
+      </div>
+
+      <div class="result">
+        <p>Rock crushes Lizard. You win!!</p>
+      </div>
+      <div class="options">
+        <div class="option">
+          <img src="" alt="">
+        </div>
+        <div class="option">
+          <img src="" alt="">
+        </div>
+        <div class="option">
+          <img src="" alt="">
+        </div>
+        <div class="option">
+          <img src="" alt="">
+        </div>
+        <div class="option">
+          <img src="" alt="">
+        </div>
+      </div>
+  </main>
+
 
 
 
