Added icon images

--- a/play.html
+++ b/play.html
@@ -40,22 +40,26 @@
         <p>Rock crushes Lizard. You win!!</p>
       </div>
       <div class="options">
-        <div class="option">
-          <img src="" alt="">
+        <div class="option" id="rk">
+          <img src="assets/images/rock.png" alt="hand in a fist form">
         </div>
-        <div class="option">
-          <img src="" alt="">
+        <div class="option" id="pr">
+          <img src="assets/images/paper.png" alt="open palm">
         </div>
-        <div class="option">
-          <img src="" alt="">
+        <div class="option" id="sr">
+          <img src="assets/images/scissors.png" alt="fingers showing V sign">
         </div>
-        <div class="option">
-          <img src="" alt="">
+        <div class="option" id="lz">
+          <img src="assets/images/lizard.png" alt="fingers folded to show lizard sign">
         </div>
-        <div class="option">
-          <img src="" alt="">
+        <div class="option" id="sp">
+          <img src="assets/images/spock.png" alt="fingers shaped in a V form  with two fingers joined on each side of V">
         </div>
       </div>
+
+      <p id ="message">
+        Select your move. 
+      </p>
   </main>
 
 
