--- a/play.html
+++ b/play.html
@@ -27,12 +27,12 @@
   </header>
 
   <main>
-    <h1 class="text-center">
+    <h1 class="text-center" id="play">
       <p>ROCK PAPER SCISSORS LIZARD SPOCK</p></h1>
       <br>
       <div class="score-board">
-        <div class="label">USER</div>
-        <div class="label">COMPUTER</div>
+        <div id="user-label" class="label">USER</div>
+        <div id="computer-label" class="label">COMPUTER</div>
         <span id="user-score">0</span>:<span id="computer-score">0</span>
       </div>
 
