Changed the images nd styled it

--- a/play.html
+++ b/play.html
@@ -41,19 +41,19 @@
       </div>
       <div class="options">
         <div class="option" id="rk">
-          <img src="assets/images/rock.png" alt="hand in a fist form">
+          <img src="assets/images/rock.png" alt="image of a single rock">
         </div>
         <div class="option" id="pr">
-          <img src="assets/images/paper.png" alt="open palm">
+          <img src="assets/images/paper.png" alt="image of papers">
         </div>
         <div class="option" id="sr">
-          <img src="assets/images/scissors.png" alt="fingers showing V sign">
+          <img src="assets/images/scissors.png" alt="image of a blue scissor">
         </div>
         <div class="option" id="lz">
-          <img src="assets/images/lizard.png" alt="fingers folded to show lizard sign">
+          <img src="assets/images/lizard.png" alt="image of a lizard">
         </div>
         <div class="option" id="sp">
-          <img src="assets/images/spock.png" alt="fingers shaped in a V form  with two fingers joined on each side of V">
+          <img src="assets/images/spock.png" alt="image of small toy spock">
         </div>
       </div>
 
