Updated and styled the icons for rock paper scissor lizard and spock for better pictures

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
       <br>
      <p>In the diagram above, arrows indicate dominance.</p>
      <br>
-     <p>Game is played between User and Computer.</p>
+     <p>Game is played between You and Computer.</p>
      <br>
-     <p>Whoever clicks on the winning icon, wins. If both choose the same icon, then it's a tie.</p>
+     <p>Whoever clicks on the winning icon, wins. If you and computer, both, choose the same icon, then it's a tie.</p>
      <br>
      <p>Click on the "Reset" button to start the game again.</p>
       <br>
