--- a/play.html
+++ b/play.html
@@ -31,7 +31,7 @@
       <p>ROCK PAPER SCISSORS LIZARD SPOCK</p></h1>
       <br>
       <div class="score-board">
-        <div id="user-label" class="label">USER</div>
+        <div id="user-label" class="label">YOU</div>
         <div id="computer-label" class="label">COMPUTER</div>
         <span id="user-score">0</span>:<span id="computer-score">0</span>
       </div>
@@ -41,19 +41,19 @@
       </div>
       <div class="options">
         <div class="option" id="rk">
-          <img src="assets/images/rock.png" alt="image of a single rock">
+          <img src="assets/images/rock.png" alt="hand in a fist image">
         </div>
         <div class="option" id="pr">
-          <img src="assets/images/paper.png" alt="image of papers">
+          <img src="assets/images/paper.png" alt="open palm image">
         </div>
         <div class="option" id="sr">
-          <img src="assets/images/scissors.png" alt="image of a blue scissor">
+          <img src="assets/images/scissors.png" alt="image of fingers in V shape to depict scissors">
         </div>
         <div class="option" id="lz">
-          <img src="assets/images/lizard.png" alt="image of a lizard">
+          <img src="assets/images/lizard.png" alt="fingers joined to depict lizard">
         </div>
         <div class="option" id="sp">
-          <img src="assets/images/spock.png" alt="image of small toy spock">
+          <img src="assets/images/spock.png" alt="fingers spread apart with two on each side to depict spock">
         </div>
       </div>
 
