Added winning losing and draw choices using switch statements

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      <br>
      <p>Game is played between You and Computer.</p>
      <br>
-     <p>Whoever clicks on the winning icon, wins. If you and computer, both, choose the same icon, then it's a tie.</p>
+     <p>Whoever clicks on the winning icon, wins. If you and computer, both, choose the same icon, then it's a draw.</p>
      <br>
      <p>Click on the "Reset" button to start the game again.</p>
       <br>
