--- a/play.html
+++ b/play.html
@@ -30,6 +30,7 @@
     <h1 class="text-center" id="play">
       <p>ROCK PAPER SCISSORS LIZARD SPOCK</p></h1>
       <br>
+      <!-- Creating the score-board -->
       <div class="score-board">
         <div id="user-label" class="label">YOU</div>
         <div id="computer-label" class="label">COMPUTER</div>
