--- a/play.html
+++ b/play.html
@@ -43,18 +43,23 @@
       <div class="options">
         <div class="option" id="rk">
           <img src="assets/images/rock.png" alt="hand in a fist image">
+          <p>ROCK</p>
         </div>
         <div class="option" id="pr">
           <img src="assets/images/paper.png" alt="open palm image">
+          <p>PAPER</p>
         </div>
         <div class="option" id="sr">
           <img src="assets/images/scissors.png" alt="image of fingers in V shape to depict scissors">
+          <p>SCISSORS</p>
         </div>
         <div class="option" id="lz">
           <img src="assets/images/lizard.png" alt="fingers joined to depict lizard">
+          <p>LIZARD</p>
         </div>
         <div class="option" id="sp">
           <img src="assets/images/spock.png" alt="fingers spread apart with two on each side to depict spock">
+          <p>SPOCK</p>
         </div>
       </div>
 
