added event listeners to the icons

--- a/play.html
+++ b/play.html
@@ -28,7 +28,10 @@
 
   <main>
     <h1 class="text-center" id="play">
-      <p>ROCK PAPER SCISSORS LIZARD SPOCK</p></h1>
+      <p>ROCK PAPER SCISSORS LIZARD SPOCK</p>
+      <br>
+      <p>15 points to win!!</p>
+    </h1>
       <br>
       <!-- Creating buttons to start and reset the game -->
       <div id="button-container">
@@ -75,7 +78,7 @@
       </div>
       <div id="game-area">
         <div class="select-game">
-            <p>Player</p>
+            <p>You</p>
             <div id="player-image" ></div>
         </div>
         <div class="select-game">
