Adjusted the font colors to improve contrast and update h1 and h2 to improve accessibility

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 
   <main>
     <!-- Home page displaying game name, game rules in diagram and written format -->
-     <h2 class="text-center">
-      <p>Welcome to</p> 
-      <p>ROCK PAPER SCISSORS LIZARD SPOCK GAME</p></h2>
+     <h1 class="text-center">Welcome To </h1>
+     <h2 class="text-center">ROCK PAPER SCISSORS LIZARD SPOCK GAME</h2>
     <div id="icon">
       <img src="assets/images/RPSLS icon.png" alt="Icon explaining the game">
     </div>
