--- a/play.html
+++ b/play.html
@@ -27,10 +27,9 @@
   </header>
 
   <main>
-    <h2 class="text-center" id="play">
-      <p>ROCK PAPER SCISSORS LIZARD SPOCK</p>
+    <h1 class="text-center" id="play">ROCK PAPER SCISSORS LIZARD SPOCK</h1>
       <br>
-      <p>12 points to win!!</p>
+      <h2 class="text-center">12 points to win!!</h2>
     </h2>
       <br>
       <!-- Creating buttons to start and reset the game -->
