Change updated to improve accessibility

--- a/play.html
+++ b/play.html
@@ -51,15 +51,15 @@
       <!-- Adding the images for rock paper scissors lizard spock-->
       <div class="options">
         <div class="option" id="rk">
-          <img src="assets/images/rock.png" alt="hand in a fist image">
+          <img src="assets/images/rock.png" alt="closed fist">
           <p>ROCK</p>
         </div>
         <div class="option" id="pr">
-          <img src="assets/images/paper.png" alt="open palm image">
+          <img src="assets/images/paper.png" alt="palm of a hand">
           <p>PAPER</p>
         </div>
         <div class="option" id="sr">
-          <img src="assets/images/scissors.png" alt="image of fingers in V shape to depict scissors">
+          <img src="assets/images/scissors.png" alt="Victory sign with fingers">
           <p>SCISSORS</p>
         </div>
         <div class="option" id="lz">
