Added validator testing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Rock Paper Scissors Lizard Spock Game, Beginner level javascript game">
+    <meta name="keywords" content="RPSLS game, beginner game">
     <!-- Title -->
     <title>Rock Paper Scissor Lizard Spock Game</title>
     <!-- Favicon -->
@@ -15,7 +18,7 @@
 <body>
   <header>
     <!--Site logo and nav links -->
-    <img src="assets/images/logo rpsls.png" alt="Logo of Rock paper scissors lizard spock in a galaxy" id="logo">
+    <img src="assets/images/logo-rpsls.png" alt="Logo of Rock paper scissors lizard spock in a galaxy" id="logo">
 
     <nav> 
       <ul id="menu">
@@ -30,16 +33,16 @@
      <h1 class="text-center">Welcome To </h1>
      <h2 class="text-center">ROCK PAPER SCISSORS LIZARD SPOCK GAME</h2>
     <div id="icon">
-      <img src="assets/images/RPSLS icon.png" alt="Icon explaining the game">
+      <img src="assets/images/RPSLS-icon.png" alt="Icon explaining the game">
     </div>
     <br>
     <section id="game-rules">
    <div> 
-    <h2 class="text-center">Game Rules</h1>
+    <h2 class="text-center">Game Rules</h2>
   </div>
 
     <br>
-    <div class="blocks" class="text-center">
+    <div class="blocks text-center">
       <div>
       <h3><strong>Rules</strong></h3>
       <br>
