--- a/play.html
+++ b/play.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Rock Paper Scissors Lizard Spock Game, Beginner level javascript game">
+    <meta name="keywords" content="RPSLS game, beginner game">
     <!-- Title -->
     <title>Rock Paper Scissor Lizard Spock</title>
     <!-- Favicon -->
@@ -15,7 +18,7 @@
 <body>
   <header>
     <!--Site logo -->
-    <img src="assets/images/logo rpsls.png" alt="Logo of Rock paper scissors lizard spock in a galaxy" id="logo">
+    <img src="assets/images/logo-rpsls.png" alt="Logo of Rock paper scissors lizard spock in a galaxy" id="logo">
 
     <nav> 
       <ul id="menu">
@@ -30,7 +33,6 @@
     <h1 class="text-center" id="play">ROCK PAPER SCISSORS LIZARD SPOCK</h1>
       <br>
       <h2 class="text-center">12 points to win!!</h2>
-    </h2>
       <br>
       <!-- Creating buttons to start and reset the game -->
       <div id="button-container">
