Added Lighthouse report, deployment methods and credits

--- a/play.html
+++ b/play.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description" content="Rock Paper Scissors Lizard Spock Game, Beginner level javascript game">
-    <meta name="keywords" content="RPSLS game, beginner game">
+    <meta name="keywords" content="Game, rock, paper, scissors, lizard, spock">
     <!-- Title -->
     <title>Rock Paper Scissor Lizard Spock</title>
     <!-- Favicon -->
