--- a/play.html
+++ b/play.html
@@ -30,14 +30,11 @@
   </header>
 
   <main>
-    <h1 class="text-center" id="play">ROCK PAPER SCISSORS LIZARD SPOCK</h1>
-      <br>
-      <h2 class="text-center">12 points to win!!</h2>
-      <br>
-      <!-- Creating buttons to start and reset the game -->
-      <div id="button-container">
+      <h1 class="text-center">12 points to win!!</h1>
+      <!-- Creating button to reset the game -->
+       <div id="button-container">
         <span id="start-button">
-          <button id="start" aria-label="click on it to start">START</button>
+          <button id="start" aria-label="Click to start the game">START</button>
         </span>
         <span id="reset-button">
           <button id="reset" aria-label="Click to reset the game">RESET</button>
