Added Javascript validation results in readme

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     </section>
   </main>
 
+<!--Font-Awesome Kit-->
   <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+<!--Linked Javascript-->
   <script src="assets/js/script.js"></script>  
 </body>
 </html>
