Added 404 error page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <br>
       <p>Click on the PLAY button to begin the game. Let's play!</p>
       <br>
-      <button onclick="window.location.href='play.html'" class="align-center">PLAY GAME</button>
+      <button onclick="window.location.href='play.htm'" class="align-center">PLAY GAME</button>
       </div>
     </div>
     </section>
