--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Rock Paper Scissors Lizard Spock Game, Beginner level javascript game">
     <meta name="keywords" content="Game, rock, paper, scissors, lizard, spock">
     <!-- Title -->
-    <title>Rock Paper Scissor Lizard Spock Game</title>
+    <title>404- Page not found</title>
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/favicon_io//apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon_io/favicon-32x32.png">
