--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
     <br>
     <h1>404 - NOT FOUND</h1>
     <h2>Whoops, looks like the page you were looking for cannot be found</h2>
-    <p class="return-to-home"><a href="index.html">Return to main website</a></p>>
+    <p class="return-to-home"><a href="index.html">Return to main website</a></p>
 
   </main>
   <!--Font-Awesome Kit-->
