updated the Css styling for game page to make it responsive on mobile phones

--- a/play.html
+++ b/play.html
@@ -50,23 +50,23 @@
       <!-- Adding the images for rock paper scissors lizard spock-->
       <div class="options">
         <div class="option" id="rk">
-          <img src="assets/images/rock.png" alt="closed fist">
+          <img src="assets/images/rock.webp" alt="closed fist">
           <p>ROCK</p>
         </div>
         <div class="option" id="pr">
-          <img src="assets/images/paper.png" alt="palm of a hand">
+          <img src="assets/images/paper.webp" alt="palm of a hand">
           <p>PAPER</p>
         </div>
         <div class="option" id="sr">
-          <img src="assets/images/scissors.png" alt="Victory sign with fingers">
+          <img src="assets/images/scissors.webp" alt="Victory sign with fingers">
           <p>SCISSORS</p>
         </div>
         <div class="option" id="lz">
-          <img src="assets/images/lizard.png" alt="fingers joined to depict lizard">
+          <img src="assets/images/lizard.webp" alt="fingers joined to depict lizard">
           <p>LIZARD</p>
         </div>
         <div class="option" id="sp">
-          <img src="assets/images/spock.png" alt="fingers spread apart with two on each side to depict spock">
+          <img src="assets/images/spock.webp" alt="fingers spread apart with two on each side to depict spock">
           <p>SPOCK</p>
         </div>
       </div>
